feat: Add og meta data

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="VGR Vaccination time slots" />
+    <meta property="og:site_name" content="Vax Dashboard" />
+    <meta property="og:url" content="https://vax-dashboard.vercel.app/" />
+    <meta
+      property="og:description"
+      content="Dashboard showing VGR, Västra Götaland, time slots available for covid-19 vaccination."
+    />
+    <meta property="og:type" content="object" />
+    <meta
+      property="og:image"
+      content="https://vax-dashboard.vercel.app/public/gbg.jpg"
+    />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Vaccination Time Slots</title>
   </head>
   <body>
     <div id="root"></div>
