--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="object" />
     <meta
       property="og:image"
-      content="https://vax-dashboard.vercel.app/public/gbg.jpg"
+      content="https://vax-dashboard.vercel.app/gbg.jpg"
     />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
